Fixed spacing between go to article button and first paragraph, mobile layout complete

--- a/src/styling/feed/card.scss
+++ b/src/styling/feed/card.scss
@@ -7,14 +7,10 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  max-height: 200px;
+  max-height: 300px;
   transition: 0.3s ease-in-out;
   border-bottom: 1px solid #d5d1c680;
-  // border-top-left-radius: 5px;
-  // border-bottom-left-radius: 5px;
-  
-
-//   border: 1px solid red;
+  padding: 10px;
 }
 
 .news-article-container-open {
@@ -27,29 +23,23 @@
   max-height: 700px;
   transition: 0.3s ease-in-out;
   border-bottom: 1px solid #d5d1c680;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  padding: 15px;
+  padding: 10px;
 }
 
 .news-article-info {
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: calc(100% - 120px);
+  width: calc(100% - 130px); // (100% - ( 120px width of image + 10px spacing ))
   justify-content: space-between;
 
-  padding: 10px;
-
-//   border: 2px solid cyan;
+  transition: 0.3s ease-in-out;
 }
 
 .news-article-title {
   font-family: $font-body;
   font-size: 1.8em;
   font-weight: 600;
-
-//   border: 1px solid lime;
 }
 
 .news-article-abstract {
@@ -58,9 +48,7 @@
   font-size: 1.6em;
   position: relative;
   overflow: hidden;
-  margin: 20px 0;
-
-//   border: 1px solid magenta;
+  margin: 10px 0;
 }
 
 .news-article-abstract-open {
@@ -71,7 +59,7 @@
   display: flex;
   align-items: center;
   padding-right: 10px;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .news-article-abstract::after {
@@ -96,16 +84,31 @@
   font-family: $font-body;
   font-size: 1.6em;
   width: 100%;
-
-//   border: 1px solid orange;
 }
 
-%news-article-topic {
-  width: 25px;
-}
+// Search Topics
 .topic-earthquake {
-  @extend %activity-color;
-//   background: red;
+  padding: 3px;
+  border-radius: 5px;
+  background: rgb(160, 221, 148);
+}
+
+.topic-tsunami {
+  padding: 3px;
+  border-radius: 5px;
+  background: rgb(158, 221, 250);
+}
+
+.topic-seismic {
+  padding: 3px;
+  border-radius: 5px;
+  background: rgb(245, 236, 153);
+}
+
+.topic-alaska {
+  padding: 3px;
+  border-radius: 5px;
+  background: rgb(255, 205, 205);
 }
 
 .news-article-image {
@@ -114,8 +117,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-
-//   border: 1px solid teal;
 }
 
 .news-article-button {
@@ -124,27 +125,28 @@
   opacity: 0;
   height: 0;
   width: 50%;
-  margin: auto;
-  color: white;
+  margin: 0 auto;
+  color: $font-color-white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .news-article-button-open {
-  background-color: #247249;
+  background-color: $theme-color-primary;
   transition: all 0.3s;
   border-radius: 5px;
   width: 50%;
   height: 40px;
-  margin: auto;
+  margin: 0 auto;
   margin-bottom: 10px;
   opacity: 1;
   transition: all 0.3s;
-  color: white;
+  color: $font-color-white;
   font-size: 1.6em;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: $font-body;
 }
